# libsxx

./: CMakeLists.txt  README.md  build.sh  configure.sh  rebuild.sh
src/: CMakeLists.txt  sexpr.cpp  sxxpr.cpp
src/include/: sxxpr.hpp
src/include/sxx/: any.hpp  sexpr.hpp  variant.hpp
test/: CMakeLists.txt  test_sexpr.cpp
